# practice-c-blockchain

./: Block.cpp  Block.h  CMakeLists.txt  Crypto.cpp  Crypto.h  Encode.cpp  Encode.h  README.md  main.cpp
lib/: base64.h
